weather-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
  namespace: default
  labels:
    app: weather-service
spec:
  selector:
    matchLabels:
      app: weather-service
  replicas: 1
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
        - name: weather-service
          image: reg.anchnet.com/cloudnative/weather-service:latest
          resources:
            requests:
              cpu: 2m
              memory: 500Mi
            limits:
              cpu: 2m
              memory: 500Mi
          ports:
            - containerPort: 8080
              name: weather-service
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: default
spec:
  selector:
    app: weather-service
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-service-ingress
  namespace: default
spec:
  rules:
    - host: weatherservice.cloudnative.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 8080
